Fix warnings in rt modules
1. Generify everywhere
2. @Override
3. Redundant throws removed
4. Enhanced for
5. String concatenation to StringBuilder
6. Misc

GitOrigin-RevId: 1e4c9dd7a44360b187d23370586c81a78047cdaf